# edu-assist

./: .gitignore  config.yml  main.py  pyproject.toml
src/edu_assist/: api.py  assistant.py  config.py  llm.py  llm_client.py
src/edu_assist/tools/: formula.py
templates/: demo.html
